--- a/sass/style.sass
+++ b/sass/style.sass
@@ -29,6 +29,8 @@ body
 			background: #d8ffc9
 		&:nth-child(3)
 			background: #c7d5fc
+		&:nth-child(4) 
+			clear: both
 
 	ul
 		list-style: none
@@ -44,4 +46,6 @@ body
 
 	.card-placeholder
 		background: red
+
+
 
